--- a/styles/index.css
+++ b/styles/index.css
@@ -26,135 +26,75 @@
 }
 
 
-/** slider secndario**/
 
 
+/** slider TERCIARIO**/
+H3{
+  text-align: center;
+  margin-top: 20px;
 
-.container2 {
-    margin-bottom: 105px;
-  background-color: #151515;
-  min-height: calc(100vh - 20px);
-  color: white;
 }
-
-.content-container {
-  margin-left: 30px;
-  margin-right: 30px;
+.gallery-container{
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: 150px ;
+  padding: 20px;
+  gap: 10px;
+}
+.gallery__item{
+  position: relative
   
 }
-video{
-    width: 100%;
-    height: 70vh;
-    object-fit: cover;
-    position: absolute;
-}
-
-.featured-content {
-  height:30vh;
-  padding: 100px;
-}
-
-.featured-title {
-  width: 200px;
-  position: relative;
-}
-
-.featured-desc {
-  width: 500px;
-  color: lightgray;
-  margin: 30px 0;
-}
-
-
-.movie-list-container {
-  padding: 0 20px;
-  
-}
-
-.movie-list-wrapper {
-  position: relative;
-  overflow: hidden;
-}
-
-.movie-list {
-  display: flex;
-  align-items: center;
-  height: 300px;
-  transform: translateX(0);
-  transition: all 1s ease-in-out;
-}
-.movie-list-title{
-  position: relative;
-}
-
-.movie-list-item {
-  margin-right: 30px;
-  position: relative;
-}
-
-.movie-list-item:hover .movie-list-item-img {
-  transform: scale(1.2);
-  margin: 0 30px;
-  opacity: 0.5;
-}
-
-.movie-list-item:hover .movie-list-item-title,
-.movie-list-item:hover .movie-list-item-desc,
-.movie-list-item:hover .movie-list-item-button {
-  opacity: 1;
-}
-
-.movie-list-item-img {
-  transition: all 1s ease-in-out;
-  width: 270px;
-  height: 200px;
+.gallery__img{
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  border-radius: 20px;
 }
-
-.movie-list-item-title {
-  background-color: #333;
-  padding: 0 10px;
-  font-size: 32px;
-  font-weight: bold;
+.gallery__title{
   position: absolute;
-  top: 10%;
-  left: 50px;
-  opacity: 0;
-  transition: 1s all ease-in-out;
-}
-
-.movie-list-item-desc {
-  background-color: #333;
-  padding: 10px;
-  font-size: 14px;
-  position: absolute;
-  top: 30%;
-  left: 50px;
-  width: 230px;
-  opacity: 0;
-  transition: 1s all ease-in-out;
-}
-
-.movie-list-item-button {
-  padding: 10px;
-  background-color: #4dbf00;
+  bottom: 0;
   color: white;
-  border-radius: 10px;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  position: absolute;
-  bottom: 20px;
-  left: 50px;
-  opacity: 0;
-  transition: 1s all ease-in-out;
+  background: linear-gradient(rgba(255,255,255,0),rgba(0,0,0,1)) /** transparente**/
+  width: 100%;
+  margin: 0;
+  padding: 15px;
+}
+.gallery__h2{
+  font-size: 15px;
+  margin-bottom: 10%;
+}
+.gallery__p{
+  font-size: 8px;
+  margin: 0;
+  margin-bottom: 1%;
 }
 
-
-
-@media only screen and (max-width: 940px){
-    .menu-container{
-        display: none;
-    }
+.gallery__item:nth-child(4){
+  grid-column-start: span 2;
 }
+.gallery__item:nth-child(5){
+  grid-row-start: span 2;
+}
+.gallery__item:nth-child(2){
+  grid-row-start: span 2;
+}
+@media (300px<width<600px){
+  .gallery-container{
+  grid-template-columns: repeat(1, 1fr);
+}
+.gallery-container{
+  padding: 2px;
+  gap: 2px;
+}
+}
+@media (500px<width<800px){
+  .gallery-container{
+  grid-template-columns: repeat(3, 1fr);
+}
+.gallery__item:nth-child(4){
+  grid-column-start: span 1;
+}
+.gallery__item:nth-child(5){
+  grid-row-start: span 3;
+}
+
