--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,17 @@
+* {
+  margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+body{
+  background: gray;
+  margin: 0;
+  font-family: monospace;
+}
+
+h4{
+  text-align: center;
+}
 .carousel-item{
     max-height: 60rem;
 }
