--- a/styles/categorias.css
+++ b/styles/categorias.css
@@ -23,6 +23,7 @@ h1{
     margin-bottom: 1em;
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    color: white;
     font-weight: 900;
     font-size: 3.5em;
 }
@@ -31,6 +32,7 @@ h2{
     margin-bottom: 0.5em;
     margin-left: 0.5em;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    color: white;
     font-weight: 700;
     font-size: 1.5em;
 }
@@ -40,5 +42,5 @@ h2{
 }
 
 main{
-    background-color: var(--colorFondo) ;
+    background: url(/img/categorias/imagenFondo.jpeg) ;
 }
