--- a/styles/error404.css
+++ b/styles/error404.css
@@ -5,16 +5,17 @@
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-body{
+.bodyError404{
     min-height: 100vh;
     background-image: url(/img/error404.png);
-    background-size:cover;
+    background-size: cover;
     background-position: center;
     display: flex;
     align-items:end;
-    justify-content: center;
+    justify-content: end;
 
 }
+
 
 .btnerror404{
     border-radius: 40px;
@@ -23,15 +24,16 @@ body{
     font-size: 25px;
     font-weight: 500;
     padding: 10px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     color:blueviolet;
-    background-color: goldenrod;
+    background-color: #ffff;
     transition: 0.5s ease;
     margin-bottom: 20px;
 }
 
 .btnerror404:hover{
     
-    background-color: gold;
+    color: darkorange;
     margin-bottom: 25px;
 }
