--- a/styles/login.css
+++ b/styles/login.css
@@ -5,7 +5,7 @@
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-body{
+.bodyLogin{
     min-height: 100vh;
     background-image: url(/img/FondoLogin.png);
     background-size: cover;
@@ -17,7 +17,7 @@ body{
     
 }
 
-.container{
+.containerLogin{
     border: 2px solid rgba(255, 255, 255, 0.2);
     width: 90%;
     max-width: 450px;
@@ -29,7 +29,7 @@ body{
 
 }
 
-.container h1{
+.containerLogin h1{
     text-align: center;
     margin-bottom: 40px;
 }
