--- a/styles/error404.css
+++ b/styles/error404.css
@@ -7,14 +7,45 @@
 
 .bodyError404{
     min-height: 100vh;
-    background-image: url(/img/error404.png);
+    background-image: url(/img/FondoLogin.png);
     background-size: cover;
     background-position: center;
     display: flex;
-    align-items:end;
-    justify-content: end;
+    align-items:center;
+    justify-content: center;
+    font-size: 40px;
 
 }
+
+.containerError404{
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    width: 90%;
+    max-width: 450px;
+    padding: 30px 40px;
+    border-radius: 8px;
+    color:gold;
+    backdrop-filter: blur(30px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+    align-items:center;
+    justify-content: center;
+    text-align: center;
+
+
+}
+
+.perror404{
+    color: darkorange;
+    font-size: 20px;
+}
+
+.fa-solid{
+    font-size:250px;
+}
+
+
 
 
 .btnerror404{
@@ -27,13 +58,12 @@
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     color:blueviolet;
-    background-color: #ffff;
+    background-color: darkgoldenrod;
     transition: 0.5s ease;
     margin-bottom: 20px;
 }
 
 .btnerror404:hover{
     
-    color: darkorange;
-    margin-bottom: 25px;
+    background-color: gold;
 }
