--- a/styles/categorias.css
+++ b/styles/categorias.css
@@ -1,46 +1,79 @@
 @import url(./variables.css);
 
-.textoblanco{
-
-    color: white;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.contenedorpeliculas{
-    display: flex;
-    justify-content: space-between;
+.textoblanco {
+  color: white;
 }
 
-.pelicula{
-    display: flex;
-    width: 16%;
+.contenedorpeliculas {
+  display: flex;
+  justify-content: space-between;
 }
 
-.pelicula img{
-    width: 100%;
+.pelicula {
+  display: flex;
+  width: 16%;
 }
 
-h1{
-    margin-bottom: 1em;
-    text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: white;
-    font-weight: 900;
-    font-size: 3.5em;
+.pelicula img {
+  width: 100%;
 }
 
-h2{
-    margin-bottom: 0.5em;
-    margin-left: 0.5em;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: white;
-    font-weight: 700;
-    font-size: 1.5em;
+h1 {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: white;
+  font-weight: 900;
+  font-size: 3.5em;
 }
 
-.carousel .slide{
-    margin-bottom: 3rem;
+h2 {
+  margin-bottom: 0.5em;
+  margin-left: 0.5em;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: white;
+  font-weight: 700;
+  font-size: 2em;
 }
 
-main{
-    background: url(/img/categorias/imagenFondo.jpeg) ;
+.carousel .slide {
+  margin-bottom: 3rem;
+}
+
+main {
+  background: url(/img/categorias/imagenFondo.jpeg);
+  background-size: cover;
+}
+
+.banner {
+  width: 100%;
+  height: 800px;
+  background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 1) 0%,
+      rgba(255, 255, 255, 0) 85%
+    ),
+    url(/img/categorias/infantiles/bannerinfantil.jpeg);
+  background-size: cover;
+  margin-bottom: 3em;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  padding: 0px 0px 2em 3em;
+}
+
+.botonVerMas {
+  color: white;
+  background-color: rgba(68, 64, 64, 0.384);
+  width: 15%;
+  height: 45px;
+  border: white 1px solid;
+  border-radius: 7px;
+  &:hover {
+    background-color: rgba(68, 64, 64, 0);
+    transition: 0.2s;
+  }
 }
