--- a/styles/categorias.css
+++ b/styles/categorias.css
@@ -65,6 +65,23 @@ main {
   padding: 0px 0px 2em 3em;
 }
 
+.bannerCsFiccion{
+    width: 100%;
+    height: 800px;
+    background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 1) 0%,
+      rgba(255, 255, 255, 0) 85%
+    ),
+    url(/img/categorias/ciencia_ficcion/banneravatar.jpg);
+    background-size: cover;
+     margin-bottom: 3em;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  padding: 0px 0px 2em 3em;
+}
+
 .botonVerMas {
   color: white;
   background-color: rgba(68, 64, 64, 0.384);
