--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,8 @@
 	box-sizing: border-box;
 }
 body{
-  background: gray;
+  background: url(/img/categorias/imagenFondo.jpeg);
+  background-size: cover;
   margin: 0;
   font-family: monospace;
 }
@@ -112,4 +113,34 @@ H3{
   grid-row-start: span 3;
 }
 
+}
+ /**categoria**/
+.categorias {
+  background: #168587;
+  background: linear-gradient(
+    0deg,
+    rgba(22, 133, 135, 0.6) 7%,
+    rgba(189, 42, 189, 0.8) 70%
+  );
+  width: 16%;
+  height: 250px;
+  color: white;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 35px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  text-decoration: none;
+  &:hover {
+    color: rgb(64, 4, 121);
+    transition: 0.4s;
+  }
+}
+
+.conteinerCategorias {
+  width: 100%;
+  justify-content: space-between;
+  display: flex;
 }
