modificacion del index

--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,4 @@
 @import "/styles/nosotros.css";
 @import "/styles/registro.css";
 @import "/styles/error404.css";
+@import "/styles/categorias.css";
