--- a/styles/index.css
+++ b/styles/index.css
@@ -143,6 +143,7 @@ H3{
   width: 100%;
   justify-content: space-between;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .contenedorpeliculas {
@@ -176,3 +177,19 @@ H3{
   margin-top: 30px;
 }
 
+@media (max-width:1024px){
+  .categorias{
+    width: 31%;
+    height: 200px;
+    margin: 5px;
+  }
+}
+
+@media (max-width:430px) {
+  .categorias{
+    width: 47%;
+    height: 180px;
+    font-size: 1rem;
+    margin: 5px;
+  }
+}
