--- a/styles/login.css
+++ b/styles/login.css
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+    
     
 }
 
@@ -26,6 +26,8 @@
     color:gold;
     backdrop-filter: blur(30px);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
 
 }
 
@@ -112,6 +114,29 @@
     background-color: gold;
 }
 
+.btn-inicio{
+    border-radius: 40px;
+    border: 0;
+    outline: 0;
+    font-size: 15px;
+    font-weight: 300;
+    padding: 10px;
+    align-content: center;
+    cursor: pointer;
+    color:blueviolet;
+    background-color: goldenrod;
+    transition: 0.5s ease;
+
+
+}
+
+.btn-inicio:hover{
+     background-color: gold;
+
+}
+    
+   
+
 .register{
     text-align: center;
     font-size: 15px;
@@ -123,3 +148,20 @@
     color: darkorange;
     font-weight: 500;
 }
+
+.contenedor-btn-inicio{
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.a-inicio{
+    text-decoration: none;
+    font-size: 20px;
+    color: blueviolet;
+    padding: 8px;
+    font-weight:900;
+}
+
