--- a/styles/registro.css
+++ b/styles/registro.css
@@ -1,3 +1,11 @@
+nav {
+  background-color: rgb(66, 19, 110);
+}
+
+footer {
+  background-color: rgb(52, 12, 90);
+}
+
 form {
     max-width: 500px;
     margin: auto;
