--- a/styles/serie.css
+++ b/styles/serie.css
@@ -3,15 +3,26 @@ body {
   background-size: cover;
 }
 
+nav {
+  background-color: rgb(66, 19, 110);
+}
+
+footer {
+  background-color: rgb(52, 12, 90);
+}
+
 .bluey {
-    position: relative;
+  position: relative;
   width: 100%;
   height: 800px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
 }
 
 .videobluey {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .descbluey {
@@ -77,32 +88,114 @@ body {
 }
 
 .conteinerCap {
-    margin-top: 30px;
-    padding: 20px;
+  margin-top: 30px;
+  padding: 20px;
   width: 100%;
-  justify-content: space-between ;
+  justify-content: space-between;
   display: flex;
   flex-wrap: wrap;
 }
 
-.Descripcion{
-    color: white;
+.Descripcion {
+  color: white;
+  font-size: 20px;
+  margin-top: 30px;
+  margin-bottom: 100px;
+  margin-left: 20px;
+  margin-right: 500px;
+}
+
+.tituloBluey {
+  color: white;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  margin-left: 20px;
+}
+
+.Familiar {
+  color: white;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 25px;
+  margin-left: 20px;
+}
+
+.contenedorpeliculas {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem 0px 2rem 0px;
+  margin-top: 0;
+}
+
+.pelicula {
+  display: flex;
+  width: 16%;
+  &:hover {
+    transition: 0.3s;
+    transform: scale(110%);
+  }
+}
+
+.pelicula img {
+  width: 100%;
+}
+
+@media (max-width: 1024px) {
+  .botonVerMas {
+    width: 15%;
+  }
+  .capitulo {
+    width: 8%;
+    height: 87px;
+    font-size: 30px;
+  }
+  .conteinerCap {
+    padding: 10px;
+    margin-top: 15px;
+  }
+  .bluey {
+    height: 400px;
+  }
+  .Descripcion {
+    margin-bottom: 80px;
+    margin-right: 0;
     font-size: 20px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-left: 20px;
-    margin-right: 500px;
+  }
+
+  .capitulo span {
+    display: none;
+  }
 }
 
-.tituloBluey{
-    color: white;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    margin-left: 20px;
-}
+@media (max-width: 430px) {
+  .botonVerMas {
+    width: 20%;
+    font-size: 10px;
+    margin-top: 0;
+  }
+  .capitulo {
+    width: 7%;
+    height: 50px;
+    font-size: 20px;
+    border-radius: 10px;
+  }
+  .conteinerCap {
+    padding: 7px;
+    margin-top: 15px;
+  }
+  .bluey {
+    height: 250px;
+  }
+  .Descripcion {
+    margin: 10px 5px 50px 5px;
+    font-size: 15px;
+  }
 
-.Familiar{
-    color: white;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 25px;
-    margin-left: 20px;
+  .capitulo span {
+    display: none;
+  }
+  h1 {
+    font-size: 20px;
+  }
+  .Familiar {
+    font-size: 15px;
+  }
 }
